syntax = "proto3";

package blog;


option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogIdRequest {
    string blog_id = 1;
}

message EmptyRequest {
}

message BlogRequest {
    Blog blog = 1;
}

message BlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(BlogRequest) returns (BlogResponse) {};
    rpc ReadBlog(BlogIdRequest) returns (BlogResponse) {};
    rpc UpdateBlog(BlogRequest) returns (BlogResponse) {};
    rpc DeleteBlog(BlogIdRequest) returns (BlogResponse) {};

    rpc ListBlogs(EmptyRequest) returns (stream BlogResponse) {};
}
